--- a/main.xhtml
+++ b/main.xhtml
@@ -23,8 +23,8 @@
 </div>
 <div class="main">
     <div class="content">
-        Біографія<br/>
-        Після закінчення Принстонського університету 1986 року Безос працював на Волл-Стріт в галузі комп'ютерних наук.<br/>
+        <h2 class="bolder">Біографія </h2>
+        <a class="text">Після закінчення Принстонського університету 1986 року Безос працював на Волл-Стріт в галузі комп'ютерних наук.<br/>
         Після чого займався розробкою мережі для міжнародної торгівлі. З часом обійняв посаду віцепрезидента<br/>
         в компанії D. E. Shaw  Co, яку залишив влітку 1994 року.<br/>
         Amazon<br/>
@@ -41,6 +41,7 @@
         Безос розширив сферу своїх бізнес-інтересів 2000 року, заснувавши аеркосмічну компанію Blue Origin.<br/>
         Blue Origin почала тестові польоти в космос 2015 року й на той момент планувала розпочати комерційні<br/>
         суборбітальні польоти з людьми в кінці 2018[7]. Безос керує іншими бізнес-інвестиціями через свій венчурний<br/>
+        </a>
     </div>
     <div class="second-content">
         <div class="section"><img src="Snimok-ekrana-2020-09-27-v-14.51.15.png" width="590" height="330" alt=""/></div>
